fix bug: recommendations container still displaying when screen size is too small

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1515,7 +1515,7 @@ textarea::placeholder {
   }
 }
 
-@media screen and (max-width: 1150px) {
+@media screen and (max-width: 1205px) {
   .recommendations-container {
     display: none;
   }
